cmake_minimum_required(VERSION 2.9)
project(rosa_central)

set(CMAKE_CXX_STANDARD 11)
find_package(Boost 1.55.0 REQUIRED COMPONENTS system)
link_directories(${CMAKE_SOURCE_DIR} ${Boost_LIBRARY_DIRS})
set(Casablanca_LIBRARIES "-lboost_system -lcrypto -lssl -lcpprest -lpthread")

set(CMAKE_CXX_STANDARD 11)
FILE(GLOB_RECURSE SOURCES "src/*")
FILE(GLOB_RECURSE HEADERS "include/*")
include_directories("include" "../common/include")
set(DEFAULT_FLAGS "-Wall -pedantic -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${DEFAULT_FLAGS} -O0 -g -DDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${DEFAULT_FLAGS} -O3")
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS} src/UserList.cpp include/UserList.h)
target_link_libraries(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/../common/build/rosa_common.so ${Boost_LIBRARIES} ${Casablanca_LIBRARIES})
